--- a/CDCRealTime/src/main/resources/kafka_topic.properties
+++ b/CDCRealTime/src/main/resources/kafka_topic.properties
@@ -2,3 +2,6 @@ ods.sink_topic="ods_base_db"
 
 dwd_db.source_topic="ods_base_db"
 dwd_db.group_id="base_db_app"
+
+dwd_log.source_topic="ods_base_log"
+dwd_log.group_id="base_log_app"
