--- a/CDCRealTime/src/main/resources/kafka_topic.properties
+++ b/CDCRealTime/src/main/resources/kafka_topic.properties
@@ -28,3 +28,21 @@ dwm_user_jump_detail.source_topic="dwd_page_log"
 dwm_user_jump_detail.sink_topic="dwm_user_jump_detail"
 dwm_user_jump_detail.group_id="userJumpDetailApp"
 
+dws_product_stats.page_view_source_topic="dwd_page_log"
+dws_product_stats.order_wide_source_topic=dwm_order_wide""
+dws_product_stats.payment_wide_source_topic="dwm_payment_wide"
+dws_product_stats.cart_info_source_topic="dwd_cart_info"
+dws_product_stats.favor_info_source_topic="dwd_favor_info"
+dws_product_stats.refund_info_source_topic="dwd_order_refund_info"
+dws_product_stats.comment_info_source_topic="dwd_comment_info"
+dws_product_stats.group_id="product_stats_app"
+
+dws_province_stats.order_wide_topic="dwm_order_wide"
+dws_province_stats.group_id="province_stats"
+
+dws_visitor_stats.unique_visitor_source_topic="dwm_unique_visit"
+dws_visitor_stats.user_jump_detail_source_topic="dwm_user_jump_detail"
+dws_visitor_stats.page_view_source_topic="dwd_page_log"
+dws_visitor_stats.group_id="visitor_stats_app"
+
+
